# zebvix-chain

./: .gitattributes  .replit  .replitignore  WALLET_AUDIT.md  pnpm-lock.yaml  pnpm-workspace.yaml  replit.md  replit.nix
.agents/: agent_assets_metadata.toml
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts  (+1 more)
artifacts/data/: tokens.json
artifacts/network-overview/: index.html  package.json
artifacts/sui-fork-dashboard/: package.json  vite.config.ts  wallet-compat.mjs
artifacts/zebvix-js/: README.md  package.json  tsconfig.build.json  tsconfig.json
artifacts/zsites/: index.html  package.json
attached_assets/: Pasted--1-Backup-current-source-binary-rollback-safety-ts-date_1777198068690.txt  Pasted--1-Naya-source-download-extract-curl-compressed-o-tmp-z_1776925099885.txt  Pasted--2-Reload-systemd-restart-node--1776969670995_1776969670997.txt  Pasted--3-Start-node-single-validator-no-LAN-mDNS-nohup-target_1777013383259.txt  Pasted--3498182-usr-local-bin-zebvix-node-start-home-home-zebv_1776858682803.txt  Pasted--4-Verify-both-at-low-height-same-hash-usr-local-bin-ze_1776884044412.txt  Pasted--4-all-rocksdb-CURRENT-files-home-zebvix-chain-bak-preb_1777036453255.txt  Pasted--5-Binary-swap-note-source-zebvix-node-target-whatever-_1777320819200.txt  Pasted--5-Bridge-smoke-tests-USE-zebvix-node-binary-NOT-zbx-ec_1777022555256.txt  Pasted--5-Confirm-chain-online-sleep-3-curl-s-X-POST-H-Content_1777022301456.txt  Pasted--5-Wait-30-more-seconds-5-sec-block-time-6-blocks-and-r_1776880681061.txt  Pasted--6-Bridge-ops-now-founder-can-pay-fees-target-release-z_1777023087873.txt  Pasted--6-Register-BNB-Chain-network-id-56-matches-BSC-s-real-_1777021741086.txt  Pasted--6-Sanity-confirm-new-mode-log-alternation-still-workin_1776881960808.txt  Pasted--6-Verify-both-nodes-same-tip-usr-local-bin-zebvix-node_1776883894113.txt  Pasted--6-Vote-stats-confirm-2-2-quorum-on-a-recent-block-slee_1776880913520.txt  Pasted--7-Add-Node-2-via-tx-now-both-on-SAME-chain-tx-will-rea_1776880807837.txt  Pasted--7-Restart-systemd-service-echo-Restarting-zebvix-servi_1777342374631.txt  Pasted--7-Start-services-sudo-systemctl-start-zebvix-service-z_1776884323110.txt  Pasted--7-Verify-usr-local-bin-zebvix-node-block-number-rpc-ur_1776884150838.txt  Pasted--8-Restart-Node-1ix-node-sleep-3-pkill-SIGTERM-zebvix-n_1776883333660.txt  Pasted--Checking-sha3-v0-10-9-Checking-tracing-subscriber-v0-3_1777101354591.txt  Pasted--Compiling-rocksdb-v0-22-0-Compiling-zebvix-node-v0-1-0_1777012068752.txt  Pasted--Compiling-sui-protocol-config-v0-1-0-root-zebvix-node-_1776777782566.txt  Pasted--Compiling-zebvix-node-v0-1-0-home-zebvix-chain-error-E_1777011004441.txt  Pasted--Current-epoch-0-Epoch-length-17280-blocks-Epoch-reward_1776926304463.txt  Pasted--Finished-release-profile-optimized-target-s-in-1m-11s-_1776880292611.txt  Pasted--Finished-release-profile-optimized-target-s-in-1m-12s-_1776916403786.txt  Pasted--Google-Fonts-must-be-the-first-import-CSS-spec-require_1776773383409.txt  Pasted--Initialized-Zebvix-chain-at-root-zebvix-chain-id-7878-_1776915769783.txt  Pasted--Key-se-address-kaise-banta-hai-grep-n-fn-from-keccak-b_1776781697326.txt  Pasted--Phase-B-12-Bridge-module-deploy-1777020990008_1777020990009.txt  Pasted--Production-logs-odd-heights-se-0xe381-even-se-0xbdfb-d_1776884638368.txt  Pasted--Start-with-correct-subcommand-nohup-target-release-zeb_1776997827479.txt  Pasted--Verify-sudo-ls-la-home-zebvix-chain-zebvix2-sudo-sha25_1776963477132.txt  Pasted--d-jsonrpc-2-0-method-eth-blockNumber-params-id-2-echo-_1777348743456.txt  Pasted--extracting-in-place-cargo-build-release-features-zvm-C_1777115422435.txt  Pasted--nohup-zebvix-node-start-home-home-zebvix-chain-zebvix2_1777006753848.txt  Pasted--rustc-59807616e1fa2540724bfbac14d7976d7e4a3860-library_1776915029411.txt  Pasted--rw-r-r-1-root-root-1085-Apr-23-14-34-000184-sst-rw-r-r_1776963037162.txt  (+132 more)
attached_assets/zebvix-scripts/: zebvix-setup.sh
backups/zebvix-wallet-2026-04-archived/: README.md  pubspec.yaml
lib/api-spec/: openapi.yaml
lib/bridge-deployment/: README.md  genkeys.sh  install-vps.sh
lib/bridge-relayer/: .gitignore  package.json
lib/bridge-signer/: package.json  tsconfig.json
lib/bsc-contracts/: .gitignore  DEPLOY.md  README.md  hardhat.config.ts  package.json  tsconfig.json
mobile/zebvix-wallet/: pubspec.yaml
mobile/zebvix_wallet/: .metadata  README.md  pubspec.yaml
scripts/: README_vps_hardening.md  deploy_pool_addresses_phase2_5.sh  deploy_pool_genesis_seed.sh  deploy_token_metadata_phase2.sh  deploy_token_pool_phase1.sh  deploy_typed_tx_by_hash_phase_h1.sh  deploy_zvm_tx_lookup.sh  vps_hafta1_hardening.sh
zebvix-chain/: .gitignore  Cargo.toml  HARDENING_TODO.md  README.md
zebvix-chain/.cargo/: config.toml
zebvix-chain/contracts/: BridgeMultisig.sol  BridgeVault.sol  Multicall3.sol  README.md  ZBX20.sol  ZBX_BEP20.sol  ZbxAMM.sol  ZbxStaking.sol  ZbxTimelock.sol
zebvix-chain/contracts/interfaces/: IBridgeMultisig.sol  IBridgeVault.sol  IZBX.sol
zebvix-chain/docs/: BFT_ROADMAP.md
zebvix-chain/scripts/: ci-check.sh  testnet-add-validator.sh  testnet-deploy.sh  testnet-genesis-keygen.sh
zebvix-chain/src/: block_stm.rs  bridge.rs  consensus.rs  crypto.rs  evidence.rs  evm.rs  evm_interp.rs  evm_precompiles.rs  evm_rlp.rs  evm_rpc.rs  evm_state.rs  fsm.rs  fsm_runtime.rs  lib.rs  main.rs  mempool.rs  metrics.rs  multisig.rs  p2p.rs  pool.rs  proposal.rs  rpc.rs  staking.rs  state.rs  token_pool.rs  tokenomics.rs  transaction.rs  types.rs  vote.rs  zvm.rs  zvm_interp.rs  zvm_precompiles.rs  zvm_rlp.rs  zvm_rpc.rs  zvm_state.rs
zebvix-node-patches/: INSTALL.md  README.md  apply_all.sh  step1_rename.sh  step2_address.sh  step3_constants.sh  step4_multisig.sh  step5_move.sh  step6_config.sh
zebvix-node-patches/config/: fullnode.yaml  genesis_template.yaml  validator.yaml
(+265 files in other folders)
