[package]
name = "zebvix-node"
version = "0.1.0"
edition = "2021"
authors = ["Zebvix Technologies Pvt Ltd"]
description = "Zebvix L1 blockchain node — EVM-compatible, 20-byte addresses, 150M ZBX supply with halving"
license = "MIT"

[[bin]]
name = "zebvix-node"
path = "src/main.rs"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde", "batch"] }
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
bincode = "1.3"
rocksdb = { version = "0.22", default-features = false, features = ["lz4"] }
tokio = { version = "1.39", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
primitive-types = { version = "0.13", features = ["serde", "impl-serde"] }
parking_lot = "0.12"
once_cell = "1.19"
serde-big-array = "0.5"
rayon = "1.10"
futures = "0.3"
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "mdns", "macros", "ping", "identify"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
