[package]
name = "zebvix-node"
version = "0.1.0"
edition = "2021"
authors = ["Zebvix Technologies Pvt Ltd"]
description = "Zebvix L1 blockchain node — EVM-compatible, 20-byte addresses, 150M ZBX supply with halving"
license = "MIT"

[[bin]]
name = "zebvix-node"
path = "src/main.rs"

[features]
default = []
# Phase C — ZVM (Zebvix Virtual Machine): Cancun-EVM-bytecode interpreter,
# eth_*/zbx_* JSON-RPC dispatch, custom Zebvix precompiles 0x80-0x83. Adds
# the optional `sha2` dep used by the SHA-256 precompile and pulls in the
# zvm_* modules from `lib.rs`. ZVM is fully EVM-bytecode compatible: any
# Solidity contract that compiles to EVM bytecode runs unchanged on ZVM.
# Build with `cargo build --release --features zvm` on the VPS to enable.
zvm = ["dep:sha2"]

[dependencies]
k256 = { version = "0.13", features = ["ecdsa", "serde"] }
sha3 = "0.10"
sha2 = { version = "0.10", optional = true }
rand = "0.8"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
bincode = "1.3"
rocksdb = { version = "0.22", default-features = false, features = ["lz4"] }
tokio = { version = "1.39", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
clap = { version = "4.5", features = ["derive", "env"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
primitive-types = { version = "0.13", features = ["serde", "impl-serde"] }
parking_lot = "0.12"
once_cell = "1.19"
serde-big-array = "0.5"
rayon = "1.10"
futures = "0.3"
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "mdns", "macros", "ping", "identify", "request-response", "cbor"] }

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
# Phase H — abort the WHOLE PROCESS on panic instead of unwinding the
# panicking thread. Critical for consensus safety: tokio::spawn() runs
# block-application and networking on separate tasks, and a panic in one
# task (e.g., a fail-closed read in `get_pool_token_id_by_address`) would
# otherwise just kill that task, leaving the rest of the node running in
# an inconsistent state — the exact divergence we panic to prevent. With
# `panic = "abort"`, any panic immediately terminates the process so peers
# see a clean disconnect rather than an accept-while-others-reject split.
panic = "abort"
